# personal-finance-tracker

./: Projects-to-github 1.txt  Projects-to-github 2.txt  Projects-to-github 3.txt  Projects-to-github 4.txt  Projects-to-github 5.txt
personal-finance-tracker/: .gitignore  README.md  docker-compose.yml
personal-finance-tracker/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
personal-finance-tracker/backend/app/api/: api_router.py  deps.py
personal-finance-tracker/backend/app/api/endpoints/: auth.py  budgets.py  goals.py  transactions.py  users.py
personal-finance-tracker/backend/app/core/: config.py  security.py
personal-finance-tracker/backend/app/crud/: __init__.py  base.py  crud_budget.py  crud_goal.py  crud_transaction.py  crud_user.py
personal-finance-tracker/backend/app/db/: base.py  base_class.py  session.py
personal-finance-tracker/backend/app/models/: __init__.py  budget.py  goal.py  transaction.py  user.py
personal-finance-tracker/backend/app/schemas/: __init__.py  base.py  budget.py  goal.py  token.py  transaction.py  user.py
personal-finance-tracker/frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
personal-finance-tracker/frontend/src/: App.tsx  main.tsx
