[tool.poetry]
name = "personal-finance-tracker-backend"
version = "0.1.0"
description = "Backend for the Personal Finance Tracker application"
authors = ["Ziad Aboalmagd <ziadwael1812@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
psycopg2-binary = "^2.9.9" # Or asyncpg for full async
asyncpg = "^0.29.0"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6" # For form data, file uploads
tenacity = "^8.2.3" # For retrying operations, e.g., DB connection
# For AI/ML (example)
# scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1" # For testing FastAPI endpoints
black = "^23.11.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "RUF"]
ignore = ["E501"] # Handled by black

[tool.black]
line-length = 88 